seller-api now fully functional
